--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     <div id="images">
       <h1>Images</h1>
       <main>
-        <img src="first.jpg" class="slide" alt="First photo">
-        <img src="second.jpg" class="slide" alt="second photo">
-        <img src="third.jpg" class="slide" alt="third photo">
+        <img src="Images/first.jpg" class="slide" alt="First photo">
+        <img src="Images/second.jpg" class="slide" alt="second photo">
+        <img src="Images/third.jpg" class="slide" alt="third photo">
       </main>
       <button class="perv" onclick="goPrevious()">prev</button>
       <button class="Next" onclick="goNext()">Next</button>
